--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools",
     "cSpell.words": [
-        "figlet"
+        "Dokcli",
+        "figlet",
+        "shoaibashk",
+        "shutdowned"
     ]
 }
