--- a/.github/workflow/release.yaml
+++ b/.github/workflow/release.yaml
@@ -20,9 +20,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - run: git fetch --force --tags
 
       - name: Set up GoLang
-        run: git fetch --force --tags
         uses: actions/setup-go@v3
         with:
           go-version: ">=1.19.5"
