Added Version flag

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,7 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
+project_name: dokcli
+
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -7,7 +9,11 @@ before:
     # you may remove this if you don't need go generate
     - go generate ./...
 builds:
-  - env:
+  - main: ./main.go
+    binary: "dokcli"
+    ldflags:
+      - -s -w -X github.com/shoaibashk/dokcli/cmd.Version={{ .Version }}
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
